--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gigger</title>
+    <!-- Favicon link -->
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <!-- Additional meta tags and stylesheets -->
+    <meta name="description" content="Melbourne’s most extensive gig guide">
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <style>
         /* General Page Styling */
