--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Additional meta tags and stylesheets -->
     <meta name="description" content="Melbourne’s most extensive gig guide">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js" async></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <style>
         /* General Page Styling */
         body {
@@ -71,71 +71,12 @@
         /* Filter Section */
         .filters {
             margin-bottom: 20px;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
-        .filters label,
-        .filters input,
-        .filters select {
-            margin: 5px;
-        }
-
-        select, input {
-            padding: 10px;
-            font-size: 1.1em;
-            margin: 5px;
-            width: 80%;
-        }
-
-        button {
-            padding: 10px 20px;
-            font-size: 1.1em;
-            background-color: #333333;
-            color: white;
-            border: none;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #555555;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2em;
-            }
-
-            h2 {
-                font-size: 1.2em;
-            }
-
-            table {
-                width: 100%;
-            }
-
-            .filters input, .filters select {
-                width: 90%;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5em;
-            }
-
-            h2 {
-                font-size: 1em;
-            }
-
-            select, input, button {
-                width: 100%;
-                font-size: 1em;
-            }
+        select {
+            padding: 5px;
+            font-size: 1em;
+            margin-right: 10px;
         }
     </style>
 </head>
