--- a/index.html
+++ b/index.html
@@ -44,23 +44,27 @@
     </div>
 
     <!-- Table -->
-<!-- Table Wrapper for Scrolling -->
-<div class="table-container">
-    <table>
-        <thead>
-            <tr>
-                <th>Event Name</th>
-                <th>Date</th>
-                <th>Time</th>
-                <th>Venue</th>
-                <th>Address</th>
-                <th>Link</th>
-            </tr>
-        </thead>
-        <tbody></tbody>
-    </table>
-</div>
-
+    <!-- Table Wrapper for Scrolling -->
+    <div class="table-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Event Name</th>
+                    <th>Date</th>
+                    <th>Time</th>
+                    <th>Venue</th>
+                    <th>Link</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Example of a subheading row for grouped dates -->
+                <tr class="subheading-row">
+                    <td colspan="6">Grouped Dates</td>
+                </tr>
+                <!-- Your event rows will go here -->
+            </tbody>
+        </table>
+    </div>
 
     <!-- Script for Loading and Displaying Data -->
     <script src="script.js"></script>
