--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
                 <thead>
                     <tr>
                         <th>Event Name</th>
-                        <th>Date</th>
-                        <th>Time</th>
                         <th>Venue</th>
+                        <th>Address</th>
                         <th>Link</th>
                     </tr>
                 </thead>
@@ -96,7 +95,9 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&libraries=places&callback=initMap" async defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="script.js"></script>
-
+    <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&loading=async&libraries=places&callback=initMap">
+</script>
 
 </body>
 </html>
