--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
             <label for="radius">Radius (km):</label>
             <input type="number" id="radius" placeholder="e.g., 5">
         </div>
-        <div class="search-button">
-            <button onclick="searchButtonPressed()">Search</button>
+        <div class="filter-button">
+            <button onclick="searchButtonPressed()">Filter</button>
+        </div>
+        <div class="text-search">
+            <input type="text" id="searchText" placeholder="Search by event title, venue, or address" oninput="searchButtonPressed()">
         </div>
     </div>
 
@@ -63,6 +66,7 @@
             </thead>
             <tbody id="table-body"></tbody>
         </table>
+        <p id="noResultsMessage" style="display:none;">No results found, try widening your search.</p>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
