--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-HFMZGH2KX8"></script>
 
     <!-- Google Maps API -->
-    <script async 
+    <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&libraries=places&callback=initialize">
     </script>
 
@@ -44,7 +44,7 @@
             <button onclick="searchButtonPressed()">Filter</button>
         </div>
         <div class="text-search">
-            <input type="text" id="searchText" placeholder="Search by event title, venue, or address" oninput="searchButtonPressed()">
+            <input type="text" id="searchText" placeholder="Search by event title, venue, or address" oninput="handleSearchInput(event)">
         </div>
     </div>
 
