--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <table>
             <thead>
                 <tr>
-                    <th>Event Name</th>
+                    <th>Event Name (Link)</th>
                     <th>Venue</th>
-                    <th>Address</th>
+                    <th>Address (Link)</th>
                 </tr>
             </thead>
             <tbody id="table-body"></tbody>
