--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   
 <head>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&libraries=places"></script>
-
+  <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  script-src  'self' 'unsafe-inline' 'unsafe-eval';
+  style-src   'self' 'unsafe-inline';
+  img-src     'self' data:;
+  connect-src 'self';
+  font-src    'self';
+  manifest-src 'self'
+">
   <!--
     If you are serving your web app in a path other than the root, change the
     href value below to reflect the base path you are serving from.
