--- a/index.html
+++ b/index.html
@@ -1,75 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  
 <head>
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-HFMZGH2KX8"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&libraries=places"></script>
 
-    <!-- Google Maps API -->
-    <script async 
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBX9OiBSEsyLVrn86jYrYiKHrBOg7S9bCc&libraries=places&callback=initialize">
-    </script>
+  <!--
+    If you are serving your web app in a path other than the root, change the
+    href value below to reflect the base path you are serving from.
 
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-HFMZGH2KX8');
-    </script>
+    The path provided below has to start and end with a slash "/" in order for
+    it to work correctly.
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gigger</title>
-    <link rel="icon" href="favicon.png" type="image/x-icon">
-    <meta name="description" content="Melbourne’s most extensive gig guide">
-    <link rel="stylesheet" href="styles.css">
+    For more details:
+    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+
+    This is a placeholder for base href that will be replaced by the value of
+    the `--base-href` argument provided to `flutter build`.
+  -->
+  <base href="/">
+
+  <meta charset="UTF-8">
+  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+  <meta name="description" content="A new Flutter project.">
+
+  <!-- iOS meta tags & icons -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="gigger_flutter_app">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="favicon.png"/>
+
+  <title>gigger_flutter_app</title>
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-    <h1>GIGGER</h1>
-    <h2>Melbourne’s most extensive gig guide</h2>
-
-    <div class="filters">
-        <div class="filter-group">
-            <label for="startDate">Start Date:</label>
-            <input type="date" id="startDate">
-            <label for="endDate">End Date:</label>
-            <input type="date" id="endDate">
-        </div>
-        <div class="filter-group">
-            <label for="address">Address:</label>
-            <input type="text" id="address" class="adress-input" placeholder="Enter address">
-            <label for="radius">Radius (km):</label>
-            <input type="number" id="radius" placeholder="e.g., 5">
-        </div>
-        <div class="filter-button">
-            <button onclick="searchButtonPressed()">Filter</button>
-        </div>
-        <div class="text-search">
-            <input type="text" id="searchText" placeholder="Search by event title, venue, or address" oninput="searchButtonPressed()">
-        </div>
-    </div>
-
-    <div id="tabs">
-        <button class="tab-button" id="table-tab" onclick="showTab('table-tab', 'table')">Table View</button>
-        <button class="tab-button" id="map-tab" onclick="showTab('map-tab', 'map')">Map View</button>
-    </div>
-
-    <div id="map" class="tab-content"></div>
-
-    <div id="table" class="tab-content">
-        <table>
-            <thead>
-                <tr>
-                    <th>Event Name (Link)</th>
-                    <th>Venue</th>
-                    <th>Address (Link)</th>
-                </tr>
-            </thead>
-            <tbody id="table-body"></tbody>
-        </table>
-        <p id="noResultsMessage" style="display:none;">No results found, try widening your search.</p>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
-    <script src="script.js"></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
