--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>gigger_flutter_app</title>
+  <title>Gigger</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
